# Universal-Ops

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs
crates/install-common/: Cargo.toml
crates/install-common/src/: lib.rs
crates/manager/: Cargo.toml
crates/manager/src/: main.rs
crates/ops/: Cargo.toml
crates/ops/src/: agent_identity.rs  config.rs  main.rs
crates/ops/src/security/: blocklist.rs
crates/ops/src/tools/: bagtag.rs  breadcrumb.rs  config_ops.rs  cpc_state.rs  extraction.rs  files.rs  health.rs  mod.rs  reminder.rs  sessions.rs  sqlite.rs  transcripts.rs  utils.rs  xforms.rs
wix/: main.wxs
