[workspace]
resolver = "2"
members = [
    "crates/manager",
    "crates/ops",
    "crates/dashboard",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
authors = ["Joseph Wander <josephwander@gmail.com>"]
license = "MIT"
repository = "https://github.com/AIWander/Universal-Ops"
rust-version = "1.75"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
