[package]
name = "install-common"
description = "Shared install/uninstall subcommand logic for Universal-Ops binaries (manager, ops, dashboard)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "install_common"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde_json = "1"
chrono = "0.4"
dirs = "5"
