[package]
name = "manager"
description = "Universal-Ops manager — orchestrates delegation to coding agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
install-common = { path = "../install-common" }
anyhow = "1"
