[package]
name = "ops"
description = "Universal-Ops ops — local execution hands for delegated coding agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[[bin]]
name = "ops"
path = "src/main.rs"
