[package]
name = "ops"
description = "Universal-Ops ops — local execution hands for delegated coding agents (file I/O, sessions, build/deploy, breadcrumbs, reminders)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[[bin]]
name = "ops"
path = "src/main.rs"

[dependencies]
install-common = { path = "../install-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
anyhow = "1"
arboard = "3.2"
rusqlite = { version = "0.39", features = ["bundled"] }
dirs = "5"
cpc-paths = { git = "https://github.com/AIWander/cpc-paths", tag = "v0.1.3" }
